Merged from 1.4.0-vcli-alpha branch