@@ -11,13 +11,12 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.LineNumberReader;
 import java.io.StringWriter;
-import java.net.InetAddress;
-import java.net.URL;
-import java.net.UnknownHostException;
+import java.net.URI;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.Set;
 
+import org.json.JSONObject;
 import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.Before;
@@ -29,6 +28,7 @@ import org.meandre.core.repository.LocationBean;
 import org.meandre.core.repository.QueryableRepository;
 import org.meandre.core.repository.RepositoryImpl;
 import org.meandre.core.security.Role;
+import org.meandre.core.utils.NetworkTools;
 import org.meandre.demo.repository.DemoRepositoryGenerator;
 import org.meandre.webservices.MeandreServer;
 
@@ -42,14 +42,15 @@ import com.hp.hpl.jena.rdf.model.ResourceFactory;
  * can make, one per test case.
  *
  * @author pgroves
+ * Modified by Xavier Llor&agrave;s
  */
 public class MeandreClientTest {
 
-    private static String _serverUrl = "localhost";
+    private static String _serverUrl = NetworkTools.getLocalHostName();
     private static int _serverPort = 1704;
     
-    private static String _workingDir = 
-        "." + File.separator + "test" + File.separator + "output";
+    //made crossplatform in setupBeforeClass
+    private static String _workingDir = "./test/output/MeandreClientTest/";
 
     private static String _sTestUploadJar = 
         "." + File.separator + "data" + File.separator + "test" + 
@@ -71,29 +72,39 @@ public class MeandreClientTest {
     public static void setUpBeforeClass() throws Exception {
         System.out.println("MeandreClientTest: setupBeforeClass begin");
         
-        try {
-        	_serverUrl = InetAddress.getLocalHost().getCanonicalHostName();
-		} catch (UnknownHostException e) {
-		}
+        _serverUrl = NetworkTools.getLocalHostName();
+        _workingDir = _workingDir.replace('/', File.separatorChar);
         
         File fWorkDir = new File(_workingDir);
         if(!fWorkDir.exists()){
             fWorkDir.mkdirs();
         }
-
+        MeandreServer.uninstall(fWorkDir);
         _server = new MeandreServer(_serverPort, _workingDir);
+        log("MeandreServer initialized");
+        //CoreConfiguration cnf = new CoreConfiguration(_serverPort,_workingDir);
+        //_server.setCoreConfiguration(cnf);
+        
+        //_server = new MeandreServer(_serverPort, _workingDir);
+        //_server.setCoreConfiguration(cnf);
+        //log("MeandreServer uninstalled");
         _server.start(false);
+        log("MeandreServer started");
         System.out.println("MeandreClientTest: setupBeforeClass end");
     }
     
+    private static void log(String msg) {
+        System.out.println("MeandreClient: " + msg);
+        
+    }
+
     @AfterClass
     public static void tearDownAfterClass() throws Exception {
         System.out.println("MeandreClientTest: tearDownAfterClass");
         //CoreConfiguration config = null;
-        //Store store = null;
-        
-        
+        //Store store = null;        
         _server.stop();
+        MeandreServer.uninstall(new File(_workingDir));
         _server = null;
     }
     /**
@@ -111,7 +122,7 @@ public class MeandreClientTest {
         try{
              //boolean ret = _meandreClient.addLocation(_sDemoRepo, "Hello Demo");
         	_meandreClient.addLocation(_sDemoRepo, "Hello Demo");
-            _meandreClient.regenerate();
+            //_meandreClient.regenerate();
              
         }catch(TransmissionException e){
             e.printStackTrace();
@@ -127,7 +138,8 @@ public class MeandreClientTest {
     public void tearDown() throws Exception {
         System.out.println("------begin teardown----------");
         _meandreClient.removeLocation(_sDemoRepo);
-        _meandreClient.regenerate();
+        //_meandreClient.regenerate();
+        System.out.println("------end teardown----------\n\n");
     }
 
     /**
@@ -136,19 +148,19 @@ public class MeandreClientTest {
      */
     @Test
     public void testRetrieveInstallationProperties() {
-        Model mProps = null;
+        JSONObject joProps = null;
         try{
-            mProps = _meandreClient.retrieveInstallationProperties();
+        	joProps = _meandreClient.retrieveInstallationProperties();
             
          }catch(TransmissionException e){
              fail("Transmission failure: " + e.toString());
          }
-         assertFalse(mProps.isEmpty());
+         assertFalse(joProps.length()<=0);
          return;
     }
 
     /**
-     * Test method for {@link org.meandre.client.MeandreClient#retrieveUserRoles()}.
+     * Test method for {@link org.meandre.client.MeandreClient#retrieveRoles()}.
      */
     @Test
     public void testRetrieveUserRoles() {
@@ -167,32 +179,12 @@ public class MeandreClientTest {
         return;
     }
     /**
-     * Test method for {@link org.meandre.client.MeandreClient#retrieveRoles()}.
-     */
-    @Test
-    public void testRetrieveRoles() {
-        Set<Role> roles = null;
-        try{
-           roles = _meandreClient.retrieveRoles();
-           
-        }catch(TransmissionException e){
-            fail("Transmission failure: " + e.toString());
-        }
-        //test to see that they all appear to be valid properties
-        String expectedPrefix = Role.BASE_ROLE_URL;
-        for(Role observedRole: roles){            
-            assertTrue(observedRole.getUrl().startsWith(expectedPrefix));
-        }
-        return;
-    }
-    
-    /**
      * Test method for 
      * {@link org.meandre.client.MeandreClient#retrieveValidRoles()}.
      */
     @Test
     public void testRetrieveValidRoles() {
-        Set<Role> roles = null;
+        Set<String> roles = null;
         try{
            roles = _meandreClient.retrieveValidRoles();
            
@@ -200,7 +192,10 @@ public class MeandreClientTest {
             fail("Transmission failure: " + e.toString());
         }
         Set<Role> expectedRoles = Role.getStandardRoles();
-        Set<Role> observedRoles = roles;
+        Set<Role> observedRoles = new HashSet<Role>();
+        for(String observedRoleUrl: roles){
+            observedRoles.add(Role.fromUrl(observedRoleUrl));
+        }
         assertTrue(observedRoles.equals(expectedRoles));
         return;
     }
@@ -247,8 +242,9 @@ public class MeandreClientTest {
         
         boolean ret;
         try{
+        	 // Location already added on setup
              ret = _meandreClient.addLocation(sNewLoc, "Hello Demo");
-             assertTrue("!Demo Repo Added.", ret);
+             assertFalse("!Demo Repo Added.", ret);
              
         }catch(TransmissionException e){
             fail("Transmission failure: " + e.toString());
@@ -266,8 +262,7 @@ public class MeandreClientTest {
         sNewLoc += "/public/services/demo_repository.nt";
         boolean ret;
         try{
-            ret = _meandreClient.addLocation(sNewLoc, "Hello Demo");
-            assertTrue("!demo repo was added", ret);
+        	// Location already added on setup
             ret = _meandreClient.removeLocation(sNewLoc);
             assertTrue("!demo repo was removed", ret);
        }catch(TransmissionException e){
@@ -317,21 +312,21 @@ public class MeandreClientTest {
      * Test method for {@link org.meandre.client.MeandreClient#retrieveComponentUrls()}.
      */
     @Test
-    public void testRetrieveComponentUrls() {
-        Set<URL> compUrls = null;
+    public void testRetrieveComponentUris() {
+        Set<URI> compUris = null;
         try{
-            compUrls = _meandreClient.retrieveComponentUrls();
+            compUris = _meandreClient.retrieveComponentUris();
         }catch (TransmissionException e){
             fail("Transmission failure: " + e.toString());
         }
         try{
-            URL expected1 = new URL("http://test.org/component/push-string");
-            URL expected2 = new URL("http://test.org/component/print-object");
+        	URI expected1 = new URI("meandre://test.org/component/push-string");
+            URI expected2 = new URI("meandre://test.org/component/print-object");
             /*for(URL comp: compUrls){
                 System.out.println(comp.toString());
             }*/
-            assertTrue("!contains 1", compUrls.contains(expected1));
-            assertTrue("!contains 2", compUrls.contains(expected2));
+            assertTrue("!contains 1", compUris.contains(expected1));
+            assertTrue("!contains 2", compUris.contains(expected2));
 
         }catch(Exception e){
             e.printStackTrace();
@@ -345,18 +340,17 @@ public class MeandreClientTest {
      *
      */
     @Test
-    public void testRetrieveFlowUrls() {
-        Set<URL> flowUrls = null;
-        String sUrl = "http://test.org/flow/test-hello-world-with-python-and-lisp/";
+    public void testRetrieveFlowUris() {
+        Set<URI> flowUris = null;
+        String sUri = "meandre://test.org/flow/test-hello-world-with-python-and-lisp/";
         try{
-            flowUrls = _meandreClient.retrieveFlowUrls();
+            flowUris = _meandreClient.retrieveFlowUris();
         }catch (TransmissionException e){
             fail("Transmission failure: " + e.toString());
         }
         try{
-            URL expected = 
-                new URL(sUrl);
-            assertTrue("!has hello world", flowUrls.contains(expected));
+            URI expected = new URI(sUri);
+            assertTrue("!has hello world", flowUris.contains(expected));
         }catch(Exception e){
             e.printStackTrace();
         }
@@ -423,29 +417,29 @@ public class MeandreClientTest {
     public void testRetrieveComponentsByTag() {
         //test retrieving "PrintObject" component with tag "print"
         String tag = "print";
-        URL expectedCompUrl = null;
+        URI expectedCompUrl = null;
         try{
-            expectedCompUrl = new URL("http://test.org/component/print-object");
+            expectedCompUrl = new URI("meandre://test.org/component/print-object");
         }catch(Exception e){
-            fail("url prob");
+            fail("uri prob");
         }
-        Set<URL> compUrls = null;
+        Set<URI> compUris = null;
         try{
-            compUrls = _meandreClient.retrieveComponentsByTag(tag);
+            compUris = _meandreClient.retrieveComponentsByTag(tag);
         }catch(TransmissionException e){
             fail("Transmission failure: " + e.toString());
         }     
-        assertEquals(1, compUrls.size());
-        assertTrue(compUrls.contains(expectedCompUrl));
+        assertEquals(1, compUris.size());
+        assertTrue(compUris.contains(expectedCompUrl));
         
         //test doing a retrieve when there are no components for a tag
         tag = "lkjdklwkeknc";
         try{
-            compUrls = _meandreClient.retrieveComponentsByTag(tag);
+            compUris = _meandreClient.retrieveComponentsByTag(tag);
         }catch(TransmissionException e){
             fail("Transmission failure: " + e.toString());
         }
-        assertEquals(0, compUrls.size());
+        assertEquals(0, compUris.size());
     }
 
     /**
@@ -457,22 +451,22 @@ public class MeandreClientTest {
         
         //test retrieving "hello world" by "demo"
         String tag = "demo";
-        URL expectedFlowUrl = null;
+        URI expectedFlowUri = null;
         try{
-            String sUrl = "http://test.org/flow/";
-            sUrl += "test-hello-world-with-python-and-lisp/";
-            expectedFlowUrl = new URL(sUrl);
+            String sUri = "meandre://test.org/flow/";
+            sUri += "test-hello-world-with-python-and-lisp/";
+            expectedFlowUri = new URI(sUri);
         }catch(Exception e){
             fail("url prob");
         }
-        Set<URL> flowUrls = null;
+        Set<URI> flowUris = null;
         try{
-            flowUrls = _meandreClient.retrieveFlowsByTag(tag);
+            flowUris = _meandreClient.retrieveFlowsByTag(tag);
         }catch(TransmissionException e){
             fail("Transmission failure: " + e.toString());
         }     
-        assertEquals(1, flowUrls.size());
-        assertTrue(flowUrls.contains(expectedFlowUrl));   
+        assertEquals(1, flowUris.size());
+        assertTrue(flowUris.contains(expectedFlowUri));   
     }
 
     /**
@@ -482,14 +476,14 @@ public class MeandreClientTest {
      */
     @Test
     public void testRetrieveComponentDescriptor() {
-        String sUrl = "http://test.org/component/print-object";
+        String sUri = "meandre://test.org/component/print-object";
         ExecutableComponentDescription comp = null;
         try{
-            comp = _meandreClient.retrieveComponentDescriptor(sUrl);
+            comp = _meandreClient.retrieveComponentDescriptor(sUri);
         }catch(TransmissionException e){
             fail("Transmission failure: " + e.toString());
         }
-        assertEquals(sUrl, comp.getExecutableComponentAsString());
+        assertEquals(sUri, comp.getExecutableComponentAsString());
     }
 
     /**
@@ -498,15 +492,15 @@ public class MeandreClientTest {
      */
     @Test
     public void testRetrieveFlowDescriptor() {
-        String sUrl = "http://test.org/flow/test-hello-world-with-python-and-lisp/";
+        String sUri = "meandre://test.org/flow/test-hello-world-with-python-and-lisp/";
         FlowDescription comp = null;
         try{
-            comp = _meandreClient.retrieveFlowDescriptor(sUrl);
+            comp = _meandreClient.retrieveFlowDescriptor(sUri);
         }catch(TransmissionException e){
             fail("Transmission failure: " + e.toString());
         }
         System.out.println(comp.getTags().toString());
-        assertEquals(sUrl, comp.getFlowComponentAsString());
+        assertEquals(sUri, comp.getFlowComponentAsString());
     }
 
     /**
@@ -547,7 +541,7 @@ public class MeandreClientTest {
                 repo.getAvailableExecutableComponents()){
             System.out.println(comp.toString());
         }
-        String sCompUrl = "http://test.org/component/print-object";
+        String sCompUrl = "meandre://test.org/component/print-object";
         Resource rCompUrl = ResourceFactory.createResource(sCompUrl);
         ExecutableComponentDescription comp = 
                 repo.getExecutableComponentDescription(rCompUrl);
@@ -577,21 +571,21 @@ public class MeandreClientTest {
         String sResourceUrl = flow.getFlowComponentAsString();
         System.out.println(sResourceUrl);
         boolean retStat = false;
-        Set<URL> flowsAfter = null;
+        Set<URI> flowsAfter = null;
         try{
             retStat = _meandreClient.uploadFlow(flow, true);
-            flowsAfter = _meandreClient.retrieveFlowUrls();
+            flowsAfter = _meandreClient.retrieveFlowUris();
         }catch(Exception e){
             fail("TransmissionFailure: " + e.toString());
         }
         System.out.println("Retrieved Flows:");
-        for(URL flowUrl: flowsAfter){
-            System.out.println(flowUrl.toString());
+        for(URI flowUri: flowsAfter){
+            System.out.println(flowUri.toString());
         }
         assertTrue("!upload return code", retStat);
         try{
-        assertTrue("!Contains resource URL", 
-                   flowsAfter.contains(new URL(sResourceUrl)));
+        assertTrue("!Contains resource URI", 
+                   flowsAfter.contains(new URI(sResourceUrl)));
         }catch(Exception e){
             e.printStackTrace();
         }
@@ -633,7 +627,7 @@ public class MeandreClientTest {
         String sResourceUrl = flow.getFlowComponentAsString();
         System.out.println(sResourceUrl);
         boolean retStat = false;
-        Set<URL> flowsAfter = null;
+        Set<URI> flowsAfter = null;
         try{
             //Set<URL> flowsBefore = _meandreClient.retrieveFlowUrls();
             retStat = _meandreClient.uploadFlow(flow, true);
@@ -641,13 +635,13 @@ public class MeandreClientTest {
             //Set<URL> flowsMid = _meandreClient.retrieveFlowUrls();
             retStat =  _meandreClient.removeResource(sResourceUrl);
             assertTrue(retStat);
-            flowsAfter = _meandreClient.retrieveFlowUrls();
+            flowsAfter = _meandreClient.retrieveFlowUris();
         }catch(Exception e){
             fail("TransmissionFailure: " + e.toString());
         }
         try{
-            assertFalse("Contains resource URL", 
-                    flowsAfter.contains(new URL(sResourceUrl)));
+            assertFalse("Contains resource URI", 
+                    flowsAfter.contains(new URI(sResourceUrl)));
         }catch(Exception e){
             e.printStackTrace();
         }        
@@ -660,7 +654,7 @@ public class MeandreClientTest {
      */
     @Test
     public void testPublish() {
-        String sUrl = "http://test.org/flow/test-hello-world-with-python-and-lisp/";
+        String sUrl = "meandre://test.org/flow/test-hello-world-with-python-and-lisp/";
         try{
             boolean ret = _meandreClient.publish(sUrl);
             assertTrue("!publish success", ret);
@@ -678,7 +672,7 @@ public class MeandreClientTest {
      */
     @Test
     public void testUnpublish() {
-        String sUrl = "http://test.org/flow/test-hello-world-with-python-and-lisp/";
+        String sUrl = "meandre://test.org/flow/test-hello-world-with-python-and-lisp/";
         boolean ret;
         try{
             //ret = _meandreClient.publish(sUrl);
@@ -699,7 +693,7 @@ public class MeandreClientTest {
     @Test
     public void testRunFlow() {
         String sUrl = 
-                "http://test.org/flow/test-hello-world-with-python-and-lisp/";
+                "meandre://test.org/flow/test-hello-world-with-python-and-lisp/";
         String ret;
         try{
             
@@ -724,7 +718,7 @@ public class MeandreClientTest {
     public void testRunFlowStreamOutput() {
         
         String sUrl = 
-            "http://test.org/flow/test-hello-world-with-python-and-lisp/";
+            "meandre://test.org/flow/test-hello-world-with-python-and-lisp/";
         
         try{
         
@@ -786,6 +780,24 @@ public class MeandreClientTest {
         return;
     }
 
+    /**
+     * Test method for 
+     * {@link org.meandre.client.MeandreClient#uploadFiles(Set<File>, boolean)}.
+     */
+    @Test
+    public void testRunRepositorys() {
+        Model mod = DemoRepositoryGenerator.getTestHelloWorldMoreHetereogenousRepository();
+        try{
+            String ret = _meandreClient.runRepository(mod);
+            System.out.println(ret);
+            assertTrue(ret.length()>1000);
+            assertTrue(ret.indexOf("Error")==-1);
+        }catch(Exception e){
+            e.printStackTrace();
+            fail("could not complete upload");
+        }
+        return;
+    }
     /**
      * Test method for {@link org.meandre.client.MeandreClient#abortFlow()}.
      */
